crates/escalier_parser/src/snapshots/escalier_parser__stmt_parser__tests__parse_let_destructuring-2.snap
---
source: crates/escalier_parser/src/stmt_parser.rs
expression: "parse(\"let {x: x1, y: y1} = p1;\")"
---
[
    Stmt {
        kind: Let {
            pattern: Pattern {
                loc: SourceLocation {
                    start: Position {
                        line: 1,
                        column: 5,
                    },
                    end: Position {
                        line: 1,
                        column: 19,
                    },
                },
                kind: Object(
                    ObjectPat {
                        props: [
                            KeyValue(
                                KeyValuePatProp {
                                    loc: SourceLocation {
                                        start: Position {
                                            line: 1,
                                            column: 6,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 11,
                                        },
                                    },
                                    key: Ident {
                                        name: "x",
                                        loc: SourceLocation {
                                            start: Position {
                                                line: 1,
                                                column: 6,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 7,
                                            },
                                        },
                                    },
                                    value: Pattern {
                                        loc: SourceLocation {
                                            start: Position {
                                                line: 1,
                                                column: 9,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 11,
                                            },
                                        },
                                        kind: Ident(
                                            BindingIdent {
                                                name: "x1",
                                                loc: SourceLocation {
                                                    start: Position {
                                                        line: 1,
                                                        column: 9,
                                                    },
                                                    end: Position {
                                                        line: 1,
                                                        column: 11,
                                                    },
                                                },
                                                mutable: false,
                                            },
                                        ),
                                    },
                                    init: None,
                                },
                            ),
                            KeyValue(
                                KeyValuePatProp {
                                    loc: SourceLocation {
                                        start: Position {
                                            line: 1,
                                            column: 13,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 18,
                                        },
                                    },
                                    key: Ident {
                                        name: "y",
                                        loc: SourceLocation {
                                            start: Position {
                                                line: 1,
                                                column: 13,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 14,
                                            },
                                        },
                                    },
                                    value: Pattern {
                                        loc: SourceLocation {
                                            start: Position {
                                                line: 1,
                                                column: 16,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 18,
                                            },
                                        },
                                        kind: Ident(
                                            BindingIdent {
                                                name: "y1",
                                                loc: SourceLocation {
                                                    start: Position {
                                                        line: 1,
                                                        column: 16,
                                                    },
                                                    end: Position {
                                                        line: 1,
                                                        column: 18,
                                                    },
                                                },
                                                mutable: false,
                                            },
                                        ),
                                    },
                                    init: None,
                                },
                            ),
                        ],
                        optional: false,
                    },
                ),
            },
            expr: Expr {
                kind: Identifier(
                    "p1",
                ),
                loc: SourceLocation {
                    start: Position {
                        line: 1,
                        column: 22,
                    },
                    end: Position {
                        line: 1,
                        column: 24,
                    },
                },
            },
            type_ann: None,
        },
        loc: SourceLocation {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 1,
                column: 24,
            },
        },
    },
]
