crates/escalier_parser/src/snapshots/escalier_parser__stmt_parser__tests__parse_let_destructuring.snap
---
source: crates/escalier_parser/src/stmt_parser.rs
expression: "parse(\"let {x, y} = point;\")"
---
[
    Stmt {
        kind: Let {
            pattern: Pattern {
                loc: SourceLocation {
                    start: Position {
                        line: 1,
                        column: 4,
                    },
                    end: Position {
                        line: 1,
                        column: 11,
                    },
                },
                kind: Object(
                    ObjectPat {
                        props: [
                            Shorthand(
                                ShorthandPatProp {
                                    loc: SourceLocation {
                                        start: Position {
                                            line: 1,
                                            column: 6,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 7,
                                        },
                                    },
                                    ident: BindingIdent {
                                        name: "x",
                                        loc: SourceLocation {
                                            start: Position {
                                                line: 1,
                                                column: 6,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 7,
                                            },
                                        },
                                        mutable: false,
                                    },
                                    init: None,
                                },
                            ),
                            Shorthand(
                                ShorthandPatProp {
                                    loc: SourceLocation {
                                        start: Position {
                                            line: 1,
                                            column: 9,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 10,
                                        },
                                    },
                                    ident: BindingIdent {
                                        name: "y",
                                        loc: SourceLocation {
                                            start: Position {
                                                line: 1,
                                                column: 9,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 10,
                                            },
                                        },
                                        mutable: false,
                                    },
                                    init: None,
                                },
                            ),
                        ],
                        optional: false,
                    },
                ),
            },
            expr: Expr {
                kind: Identifier(
                    "point",
                ),
                loc: SourceLocation {
                    start: Position {
                        line: 1,
                        column: 14,
                    },
                    end: Position {
                        line: 1,
                        column: 19,
                    },
                },
            },
            type_ann: None,
        },
        loc: SourceLocation {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 1,
                column: 19,
            },
        },
    },
]
