crates/escalier_parser/src/snapshots/escalier_parser__stmt_parser__tests__parse_let_with_destructuring.snap
---
source: crates/escalier_parser/src/stmt_parser.rs
expression: "parse(r#\"let {x, y} = point\"#)"
---
[
    Stmt {
        kind: Let {
            pattern: Pattern {
                kind: Object(
                    ObjectPat {
                        props: [
                            Shorthand(
                                ShorthandPatProp {
                                    span: 5..6,
                                    ident: BindingIdent {
                                        name: "x",
                                        span: 5..6,
                                        mutable: false,
                                    },
                                    init: None,
                                },
                            ),
                            Shorthand(
                                ShorthandPatProp {
                                    span: 8..9,
                                    ident: BindingIdent {
                                        name: "y",
                                        span: 8..9,
                                        mutable: false,
                                    },
                                    init: None,
                                },
                            ),
                        ],
                        optional: false,
                    },
                ),
                span: 3..10,
                inferred_type: None,
            },
            expr: Expr {
                kind: Ident(
                    Ident {
                        name: "point",
                        span: 13..18,
                    },
                ),
                span: 13..18,
                inferred_type: None,
            },
            type_ann: None,
        },
        span: 0..18,
        inferred_type: None,
    },
]
