crates/escalier_parser/src/snapshots/escalier_parser__stmt_parser__tests__parse_let_with_destructuring_and_type_annotation.snap
---
source: crates/escalier_parser/src/stmt_parser.rs
expression: "parse(r#\"let {x, y}: Point = point\"#)"
---
[
    Stmt {
        kind: Let {
            is_declare: false,
            is_var: false,
            pattern: Pattern {
                kind: Object(
                    ObjectPat {
                        props: [
                            Shorthand(
                                ShorthandPatProp {
                                    span: 5..6,
                                    ident: BindingIdent {
                                        name: "x",
                                        span: 5..6,
                                        mutable: false,
                                    },
                                    init: None,
                                },
                            ),
                            Shorthand(
                                ShorthandPatProp {
                                    span: 8..9,
                                    ident: BindingIdent {
                                        name: "y",
                                        span: 8..9,
                                        mutable: false,
                                    },
                                    init: None,
                                },
                            ),
                        ],
                        optional: false,
                    },
                ),
                span: 3..10,
                inferred_type: None,
            },
            expr: Some(
                Expr {
                    kind: Ident(
                        Ident {
                            name: "point",
                            span: 20..25,
                        },
                    ),
                    span: 20..25,
                    inferred_type: None,
                },
            ),
            type_ann: Some(
                TypeAnn {
                    kind: TypeRef(
                        "Point",
                        None,
                    ),
                    span: 12..17,
                    inferred_type: None,
                },
            ),
        },
        span: 0..25,
        inferred_type: None,
    },
]
