crates/escalier_parser/src/snapshots/escalier_parser__stmt_parser__tests__parse_new_line_inference-4.snap
---
source: crates/escalier_parser/src/stmt_parser.rs
expression: "parse(\"return\\nfoo()\")"
---
[
    Stmt {
        kind: Return {
            arg: Some(
                Expr {
                    kind: Call(
                        Call {
                            callee: Expr {
                                kind: Ident(
                                    Ident {
                                        name: "foo",
                                        span: 7..10,
                                    },
                                ),
                                span: 7..10,
                                inferred_type: None,
                            },
                            type_args: None,
                            args: [],
                            opt_chain: false,
                            throws: None,
                        },
                    ),
                    span: 7..12,
                    inferred_type: None,
                },
            ),
        },
        span: 7..12,
        inferred_type: None,
    },
]
