crates/escalier_parser/src/snapshots/escalier_parser__stmt_parser__tests__parse_new_line_inference.snap
---
source: crates/escalier_parser/src/stmt_parser.rs
expression: "parse(\"1 + \\n2\")"
---
[
    Stmt {
        kind: Expr {
            expr: Expr {
                kind: Binary(
                    Binary {
                        left: Expr {
                            kind: Num(
                                Num {
                                    value: "1",
                                },
                            ),
                            span: 0..1,
                            inferred_type: None,
                        },
                        op: Plus,
                        right: Expr {
                            kind: Num(
                                Num {
                                    value: "2",
                                },
                            ),
                            span: 5..6,
                            inferred_type: None,
                        },
                    },
                ),
                span: 0..6,
                inferred_type: None,
            },
        },
        span: 0..6,
    },
]
