crates/escalier_parser/src/snapshots/escalier_parser__stmt_parser__tests__parse_one_liners.snap
---
source: crates/escalier_parser/src/stmt_parser.rs
expression: "parse(r#\"foo() bar()\"#)"
---
[
    Stmt {
        kind: Expr {
            expr: Call(
                Call {
                    span: 0..5,
                    callee: Ident(
                        Ident {
                            name: "foo",
                            span: 0..3,
                        },
                    ),
                    type_args: None,
                    args: [],
                },
            ),
        },
        span: 0..5,
    },
    Stmt {
        kind: Expr {
            expr: Call(
                Call {
                    span: 6..11,
                    callee: Ident(
                        Ident {
                            name: "bar",
                            span: 6..9,
                        },
                    ),
                    type_args: None,
                    args: [],
                },
            ),
        },
        span: 6..11,
    },
]
